@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2007, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2009, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * ---------------------
  * SubseriesDataset.java
  * ---------------------
- * (C) Copyright 2001-2007, by Bill Kelemen and Contributors.
+ * (C) Copyright 2001-2009, by Bill Kelemen and Contributors.
  *
  * Original Author:  Bill Kelemen;
  * Contributor(s):   Sylvain Vieujot;
@@ -47,6 +47,8 @@
  * 29-Nov-2005 : Removed SignalsDataset (DG);
  * ------------- JFREECHART 1.0.x ---------------------------------------------
  * 02-Feb-2007 : Removed author tags from all over JFreeChart sources (DG);
+ * 04-Feb-2009 : Deprecated, this class won't be supported in version
+ *               1.2.0 (DG);
  *
  */
 
@@ -60,6 +62,10 @@ import org.jfree.data.xy.XYDataset;
 /**
  * This class will create a dataset with one or more series from another
  * {@link SeriesDataset}.
+ *
+ * @deprecated As of version 1.0.13.  This class will be removed from
+ *     JFreeChart 1.2.0 onwards.  Anyone needing this facility will need to
+ *     maintain it outside of JFreeChart.
  */
 public class SubSeriesDataset extends AbstractIntervalXYDataset
         implements OHLCDataset, IntervalXYDataset, CombinationDataset {
